--- a/rootfs/etc/apache2/httpd.conf
+++ b/rootfs/etc/apache2/httpd.conf
@@ -26,8 +26,8 @@ TypesConfig /etc/apache2/mime.types
     Require all denied
 </Directory>
 
-DocumentRoot "/icingaweb2/public"
-<Directory "/icingaweb2/public">
+DocumentRoot "/usr/share/webapps/icingaweb2/public"
+<Directory "/usr/share/webapps/icingaweb2/public">
     AllowOverride None
     Require all granted
     Options SymLinksIfOwnerMatch
