--- a/content/etc/icingaweb2/resources.ini
+++ b/content/etc/icingaweb2/resources.ini
@@ -1,22 +1,23 @@
 [icingaweb_db]
-type                = "db"
-db                  = "mysql"
-host                = "localhost"
-port                = "3306"
-dbname              = "icingaweb2"
-username            = "icingaweb2"
-password            = "icingaweb2_changeme"
-prefix              = "icingaweb_"
-charset             = "utf8"
-persistent          = "0"
+type = "db"
+db = "pgsql"
+host = "${WEB_DB_HOST}"
+port = "${WEB_DB_PORT}"
+dbname = "${WEB_DB}"
+username = "${WEB_DB_USER}"
+password = "${WEB_DB_PASS}"
+prefix = "icingaweb_"
 
 [icinga_ido]
-type                = "db"
-db                  = "mysql"
-host                = "localhost"
-port                = "3306"
-dbname              = "icinga2idomysql"
-username            = "icinga2-ido-mysq"
-password            = "icinga2-ido-mysq_changeme"
-charset             = "utf8"
-persistent          = "0"
+type = "db"
+db = "pgsql"
+host = "${IDO_DB_HOST:-$WEB_DB_HOST}"
+port = "${IDO_DB_PORT:-$WEB_DB_PORT}"
+dbname = "${IDO_DB}"
+username = "${IDO_DB_USER:-$WEB_DB_USER}"
+password = "${IDO_DB_PASS:-$WEB_DB_PASS}"
+
+[ssh]
+type = "ssh"    
+user = "${CMDPIPE_USER}"
+private_key = "/tmp/key_for_commandtransport"
