--- a/content/etc/icingaweb2/roles.ini
+++ b/content/etc/icingaweb2/roles.ini
@@ -1,4 +1,4 @@
-[Administrators]
-users = "icingaadmin"
-permissions = "*"
-groups = "Administrators"
+[admins]
+users               = "admin"
+groups              = "admins"
+permissions         = "*"
