--- a/content/etc/icingaweb2/config.ini
+++ b/content/etc/icingaweb2/config.ini
@@ -1,10 +1,14 @@
-[global]
-show_stacktraces = "1"
-config_backend = "db"
-config_resource = "icingaweb_db"
-module_path = "/etc/icingaweb2/userModules:/usr/share/icingaweb2/modules:/usr/local/share/icingaweb2/modules"
-
 [logging]
 log = "file"
-level = "ERROR"
+level = "WARNING"
 file = "/var/log/icingaweb2/icingaweb2.log"
+
+[preferences]
+store = "db"
+resource = "icingaweb_db"
+
+[global]
+show_stacktraces = "1"
+module_path = "/usr/share/webapps/icingaweb2/modules"
+config_backend = "db"
+config_resource = "icingaweb_db"
